--- a/APICatalogo/Properties/launchSettings.json
+++ b/APICatalogo/Properties/launchSettings.json
@@ -14,7 +14,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "openapi/v1.json",
+      "launchUrl": "swagger",
+      //"launchUrl": "/openapi/v1.json",
       "applicationUrl": "https://localhost:7098;http://localhost:5059",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
